@@ -782,13 +782,17 @@ bool CLosHandler::InRadar(const float3 pos, int allyTeam) const
 
 bool CLosHandler::InRadar(const CUnit* unit, int allyTeam) const
 {
-	if (unit->IsUnderWater()) {
-		// unit is completely submerged, only sonar can see it
-		if (unit->sonarStealth && !unit->beingBuilt)
-			return false;
-
-		return (sonar.InSight(unit->pos, allyTeam) && !InJammer(unit, allyTeam));
+	// unit is discoverable by sonar
+	if (unit->IsInWater()) {
+		if ((!unit->sonarStealth || unit->beingBuilt) &&
+		    sonar.InSight(unit->pos, allyTeam) &&
+		    !InJammer(unit, allyTeam))
+			return true;
 	}
+
+	// unit is completely submerged, only sonar can see it
+	if (unit->IsUnderWater())
+		return false;
 
 	// radar stealth
 	if (unit->stealth && !unit->beingBuilt)
