@@ -9,6 +9,10 @@ General:
  - Implement VFS modes - VFS.MOD, VFS.MAP & VFS.BASE now actually work. Added VFS.MENU
  ! base archives now have modtype of 4 and menu archive have modtype of 5
 
+Sim:
+ ! Sonar will now detect ships/hovers - this is since los can't raycast through water.
+   note that wobble still exists without LoS.
+
 Lua:
  - Add Spring.Get{Game,Menu}Name to LuaUnsyncedRead, so LuaMenu and unsynced Lua handles know about each other
  - Add new callins (LuaMenu only):
